--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui Vamos a hacer un Blog Post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el primer titulo de Post</h1>
+                <p>Y este es el parrafo de inicio donde explicaremos
+                     los usas de las ramas en Git</p>
+            </div>    
+        </div>
     </body>
 </html>
