added head into blog post

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                aqui inicia la super cabecera
+            </div>
             <div id="post">
                 <h1>Este es el primer titulo de Post</h1>
                 <p>Y este es el parrafo de inicio donde explicaremos
