agregar una mejor letra al cuerpo

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Este es el primer titulo de Post</h1>
                 <p>Y este es el parrafo de inicio donde explicaremos
                      los usas de las ramas en Git</p>
+                <p> los blogs son la mejor manera de compartir informacion 
+                    con los demas desarradores nuevos.
+                </p>
             </div>    
         </div>
     </body>
