agrege texto en contenido de blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                      los usas de las ramas en Git</p>
                 <p> los blogs son la mejor manera de compartir informacion 
                     con los demas desarradores nuevos.
+                    Esto para hacer codigo mas facil y sencillo.
                 </p>
             </div>    
         </div>
