cambio de color en CSS

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
                 <p> los blogs son la mejor manera de compartir informacion 
                     con los demas desarradores nuevos.
                     Esto para hacer codigo mas facil y sencillo.
+                    Cuando un desarrollor Jr es contratado, lleva un proceso
+                    de adaptacion en la empresa, la cual es normalmente de
+                    3 meses para evaluar sus principales habilidades.
                 </p>
             </div>    
         </div>
