modificacion de cabecera masestra y el color del texto Azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el primer titulo de Post</h1>
@@ -20,6 +20,7 @@
                     de adaptacion en la empresa, la cual es normalmente de
                     3 meses para evaluar sus principales habilidades.
                 </p>
+                <p>Suscribete y dale Like</p>
             </div>    
         </div>
     </body>
