color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,27 +1,21 @@
 <html>
     <head>
-        <title>Bienvenidos a HyperBlog 2.0</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de Cabecera</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el primer titulo de Post</h1>
-                <p>Y este es el parrafo de inicio donde explicaremos
-                     los usas de las ramas en Git</p>
-                <p> los blogs son la mejor manera de compartir informacion 
-                    con los demas desarradores nuevos.
-                    Esto para hacer codigo mas facil y sencillo.
-                    Cuando un desarrollor Jr es contratado, lleva un proceso
-                    de adaptacion en la empresa, la cual es normalmente de
-                    3 meses para evaluar sus principales habilidades.
-                </p>
-                <p>Suscribete y dale Like</p>
-            </div>    
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
+            </div>
         </div>
     </body>
 </html>
