--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,10 @@
                     3 meses para evaluar sus principales habilidades.
                 </p>
                 <p>Suscribete y dale Like</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi <3
+            </div>
             </div>    
         </div>
     </body>
