cambio a entidades HTML, en lugar de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,9 +12,9 @@
             </div>
             <div id="post">
                 <h1>Este es el primer titulo de Post</h1>
-                <p>Y este es el párrafo de inicio donde explicaremos
+                <p>Y este es el p&aacute;rrafo de inicio donde explicaremos
                      los usas de las ramas en Git</p>
-                <p> los blogs son la mejor manera de compartir información 
+                <p> los blogs son la mejor manera de compartir informaci&oacute;n 
                     con los demas desarradores nuevos.
                     Esto para hacer codigo mas facil y sencillo.
                     Cuando un desarrollor Jr es contratado, lleva un proceso
