--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,8 @@
                 <h1>Este es el primer titulo de Post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde explicaremos
                      los usas de las ramas en Git</p>
+
+                <p><img src="imagenes/escritorio.png" width="60%"/></p>
                 <p> los blogs son la mejor manera de compartir informaci&oacute;n 
                     con los demas desarradores nuevos.
                     Esto para hacer codigo mas facil y sencillo.
